--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Ay4t\\Ci4smtp2go\\": "src/"
+            "Ay4t\\Smtp2go\\": "src/"
         }
     },
     "authors": [
